--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,3 +1,58 @@
 .header {
-  
+  background-color: #ffc500;
+
+  display: flex;
+  justify-content: space-between;
+
+  ul {
+    list-style-type: none;
+
+    li {
+      display: inline-block;
+      margin: 0;
+      padding: 0;
+      min-width: 200px;
+
+      a {
+        display: block;
+        height: 100%;
+        color: #fff;
+        padding: 15px 15px;
+        text-align: center;
+
+
+        &:hover,
+        &:focus {
+          text-decoration: none;
+          // opacity: 0.8;
+          box-shadow: 0px 0px 5px gray;
+        }
+
+
+      }
+
+      &:nth-of-type(1) {
+        background-color: #dc0030;
+      }
+      &:nth-of-type(2) {
+        background-color: #7c378a;
+      }
+      &:nth-of-type(3) {
+        background-color: #09a275;
+      }
+      &:nth-of-type(4) {
+        background-color: #7cb854;
+      }
+    }
+  }
+
+
+  span {
+    font-family: 'MuseoSansBold';
+    font-size: 30px;
+    color: #fff;
+    margin-right: 100px;
+    margin-top: 2px;
+    text-transform: uppercase;
+  }
 }
