--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,46 @@
+@import "./constants/style/_fonts";
+
+
+
 body {
+  // position: relative;
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: 'MuseoSansRegular', sans-serif;
+
+  // height: 100%;
+  // min-height: 100%;
+
+
+
+  ul {
+    margin: 0;
+    padding: 0;
+  }
+
+  h3 {
+    margin-top: 50px;
+    margin-bottom: 30px;
+    font-size: 30px;
+    color: #f7931e;
+    text-align: center;
+    font-family: 'MuseoSansBold';
+  }
+
+
+  // background-image: url('http://www.no-zaku.com/background/wp-content/uploads/sites/9/2016/11/Fresh-Wallpaper-For-Website-Background.jpg');
+  background-color: #f7f7f7;
+}
+
+
+div.root {
+  // position: relative;
+  //
+  // min-height: 100%;
+  //
+  // &::after {
+  //   content: '';
+  //   display: block;
+  //   height: 50px; /* Set same as footer's height */
+  // }
 }
