--- a/src/index.scss
+++ b/src/index.scss
@@ -44,3 +44,21 @@ div.root {
   //   height: 50px; /* Set same as footer's height */
   // }
 }
+
+body:not(.menu-on-top).desktop-detected {
+  min-height: 0 !important;
+}
+
+body::-webkit-scrollbar {
+  width: 0.7em;
+}
+
+body::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
+
+body::-webkit-scrollbar-thumb {
+  border-radius: 3px;
+  background-color: darkgrey;
+  outline: 1px solid slategrey;
+}
