change event item, add limits to pages

--- a/src/components/TodayPage/TodayPageContainer.scss
+++ b/src/components/TodayPage/TodayPageContainer.scss
@@ -1,3 +1,9 @@
 .today-page-container {
   // min-height: 800px;
+
+  > button {
+    display: block;
+    margin: 20px auto;
+    min-width: 150px;
+  }
 }
