--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -38,9 +38,12 @@
         background-color: #7c378a;
       }
       &:nth-of-type(3) {
-        background-color: #09a275;
+        background-color: #09a29d;
       }
       &:nth-of-type(4) {
+        background-color: #09a275;
+      }
+      &:nth-of-type(5) {
         background-color: #7cb854;
       }
     }
