--- a/src/components/parts/EventItem/EventItem.scss
+++ b/src/components/parts/EventItem/EventItem.scss
@@ -7,14 +7,45 @@
 
 
   header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    // display: flex;
+    // justify-content: space-between;
+    // align-items: center;
     margin-bottom: 20px;
+
+    div {
+      span {
+        display: block;
+        margin: 10px;
+      }
+    }
+
+    .date {
+      padding-left: 25px;
+      background-image: url('http://www.iconsfind.com/wp-content/uploads/2015/10/20151014_561e2d21d1f55.png');
+      background-repeat: no-repeat;
+      background-size: contain;
+      background-position: 0 -1px;
+      font-size: 13px;
+    }
+
+    .time {
+      padding-left: 25px;
+      background-image: url('http://icons.iconarchive.com/icons/flat-icons.com/flat/512/Clock-icon.png');
+      background-repeat: no-repeat;
+      background-size: contain;
+      font-size: 13px;
+    }
 
     a {
       max-width: 400px;
       text-align: center;
+      // text-transform: uppercase;
+      font-size: 16px;
+      width: 600px;
+      margin: 10px auto;
+      margin-bottom: 20px;
+      display: block;
+      // color: #d9644b;
     }
   }
 
@@ -24,6 +55,7 @@
     text-align: right;
     width: 200px;
     margin-left: auto;
-    margin-bottom: 0;
+    margin-bottom: 15px;
+    margin-top: -40px;
   }
 }
