--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -11,7 +11,7 @@
       display: inline-block;
       margin: 0;
       padding: 0;
-      min-width: 200px;
+      min-width: 170px;
 
       a {
         display: block;
@@ -40,10 +40,16 @@
       &:nth-of-type(3) {
         background-color: #09a29d;
       }
-      &:nth-of-type(4) {
+
+    }
+  }
+
+  ul:nth-of-type(2) {
+    li {
+      &:nth-of-type(1) {
         background-color: #09a275;
       }
-      &:nth-of-type(5) {
+      &:nth-of-type(2) {
         background-color: #7cb854;
       }
     }
@@ -54,7 +60,8 @@
     font-family: 'MuseoSansBold';
     font-size: 30px;
     color: #fff;
-    margin-right: 100px;
+    text-align: center;
+    // margin-right: 100px;
     margin-top: 2px;
     text-transform: uppercase;
   }
