--- a/src/components/TodayPage/TodayPageContainer.scss
+++ b/src/components/TodayPage/TodayPageContainer.scss
@@ -1,9 +1,14 @@
 .today-page-container {
   // min-height: 800px;
 
-  > button {
+  > div > button {
     display: block;
     margin: 20px auto;
     min-width: 150px;
+
+    &:focus,
+    &:active {
+      outline: none !important;
+    }
   }
 }
