--- a/src/components/AboutPage/SocialButtons/SocialButtons.scss
+++ b/src/components/AboutPage/SocialButtons/SocialButtons.scss
@@ -1,9 +1,13 @@
-.shared-buttons {
+.social-buttons {
   li {
     display: inline-block;
     // border: 1px solid red;
     vertical-align: top;
     margin: 0 5px;
+
+    div[role="button"] {
+      outline: none;
+    }
 
     &:hover {
       opacity: 0.75;
