add test button and feedback

--- a/src/components/TodayPage/TodayPageContainer.scss
+++ b/src/components/TodayPage/TodayPageContainer.scss
@@ -11,4 +11,10 @@
       outline: none !important;
     }
   }
+
+  .test-button {
+    margin: 20px 300px 0 auto;
+    display: block;
+    width: 150px;
+  }
 }
